# cryptowatch

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
cryptowatch/: CMakeLists.txt  MainApplication.cpp  MainApplication.h
cryptowatch/Crypto/: Bitcoin.cpp  Bitcoin.h  Ethereum.cpp  Ethereum.h
cryptowatch/Http/: HttpRequest.cpp  HttpRequest.h  HttpResponse.cpp  HttpResponse.h
